02-access-control/restrict-vllm-access/network-policy/agentgateway-allow-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: librechat-gateway-ingress
  namespace: agentgateway-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: agentgateway-proxy
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: librechat
    ports:
    - port: 80
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: librechat-two
    ports:
    - port: 80
