02-access-control/restrict-vllm-access/network-policy/vllm-allow-agentgateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vllm-allow-agentgateway-system-only
  namespace: vllm
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: agentgateway-system
